crates/core/tests/ui/proc/svc/opaque.stderr
error[E0080]: evaluation panicked: This type is not declared as a service type. Use #[ffi(service)] on the struct definition to use it with an #[ffi] impl block.
  --> tests/ui/proc/svc/opaque.rs:12:6
   |
12 | impl Service {
   |      ^^^^^^^ evaluation of `_` failed here
